# Rag_Agent

./: README.md  app.py  lamaXlang.ipynb  pyproject.toml  requirements.txt
storage/: default__vector_store.json  docstore.json  index_store.json
