[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=4.0.0",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "gradio>=4.0.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "llama-index>=0.14.16",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-groq>=0.5.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "wikipedia>=1.4.0",
]
